fix wrap

--- a/chartjs/index.css
+++ b/chartjs/index.css
@@ -50,7 +50,7 @@
 
 .app {
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: row nowrap;
 	align-items: flex-start;
 	height: 100%;
 	width: 100%;
